--- a/clase04-selectores-agrupados/style.css
+++ b/clase04-selectores-agrupados/style.css
@@ -1,12 +1,20 @@
 /* - compuestos 
-selectores agrupados
-selectores combinadores
-selectores pseudoclases y pseuelementos*/
+--selectores agrupados:
+se agrupan los selectores separados por comas y 
+se escribe el estilo en una sola vez.
 
-/* selector agrupados */
+--selectores combinadores
+    selector descendiente
+--selectores pseudoclases y pseuelementos*/
+
 .text,
 .text-2,
 .text-3,
 .text-4 {
   background-color: steelblue;
+}
+
+
+div .tittle-2 {
+  background-color: greenyellow;
 }
