--- a/clase09-box-model/style.css
+++ b/clase09-box-model/style.css
@@ -16,11 +16,19 @@ body {
   background-color: #333;
   color: white;
 }
+
+.text {
+  background-color: cornflowerblue;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .tittle {
   background-color: coral;
   width: 300px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 .block {
   background-color: rebeccapurple;
@@ -31,6 +39,7 @@ body {
   /* margin-left: 50px; */
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 .inline {
