--- a/clase09-box-model/style.css
+++ b/clase09-box-model/style.css
@@ -1,5 +1,5 @@
 /* 
-
+MARGIN: 
 margin-top: margen superior
 margin-right: margen derecho 
 margin-bottom: margen inferior
@@ -12,6 +12,25 @@ de las agujas del reloj.
 2 valores => margin: top/bottom left/right
 1 valor => top/right/bottom/left
 */
+
+/* 
+PADDING: 
+ES la propiedad que nos permite generar espacio interno entre el borde y la caja.
+Es un shorthand (propiedad abreviada) que controla los 4 lados posibles a los que 
+dar padding.
+padding-top: -> padding superior
+padding-right: -> padding derecho
+padding-bottom: -> padding inferior
+padding-left: -> padding izquierdo
+
+
+admite hasta 4 valores que van a en el orden
+ de las agujas del reloj.
+ 4 valores -> padding: top right bottom left 
+ 3 valores -> padding: top left/right bottom
+ 2 valores -> padding: top/bottom left/right
+ 1 valor -> padding: top/right/bottom/left
+ */
 body {
   background-color: #333;
   color: white;
@@ -39,10 +58,29 @@ body {
   /* margin-left: 50px; */
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+  padding: 50px;
 }
 
 .inline {
   background-color: lightcoral;
   color: inherit;
+  padding-left: 50px;
+}
+
+.list {
+  background-color: gray;
+  list-style-type: none;
+  margin: auto;
+}
+
+.buttoms {
+  margin-top: 30px;
+  background-color: coral;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.button {
+  margin-left: 100px;
+  padding: 25px 50px;
 }
